--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #2c2c2c; /* Dark grey background */
+    background-color: #D1DBE4; /* Dark grey background */
     color: #f0f0f0; /* Light grey text */
     text-align: center;
     margin: 0;
@@ -17,7 +17,7 @@ body {
     align-items: flex-start;
     width: 90%;
     max-width: 1000px;
-    background: #3a3a3a; /* Medium grey background */
+    background: #A3B7CA; /* Medium grey background */
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Slightly darker shadow */
@@ -29,16 +29,23 @@ body {
 
 h1 {
     text-align: center;
-    background-color: #4b4b4b; /* Slightly lighter grey */
+    background-color: #7593af; /* Slightly lighter grey */
     margin-bottom: 20px;
     padding: 10px;
     border-radius: 10px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .input-container {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+   text-overflow: ellipsis;
+   overflow: hidden;
+   max-width: 100% ;
+   
 }
 
 input[type="text"] {
@@ -47,8 +54,11 @@ input[type="text"] {
     border: none;
     border-radius: 5px;
     outline: none;
-    background-color: #5a5a5a; /* Lighter grey */
-    color: #f0f0f0; /* Light grey text */
+    background-color: #7593af; /* Lighter grey */
+    color: #000000; /* Light grey text */
+    text-overflow: ellipsis;
+   overflow: hidden;
+   max-width: 100% ;
 }
 
 button {
@@ -73,8 +83,8 @@ ul {
 }
 
 li {
-    background: #4b4b4b; /* Slightly lighter grey */
-    color: #f0f0f0; /* Light grey text */
+    background: #7593af; /* Slightly lighter grey */
+    color: #000000; /*  grey text */
     margin: 2px 0;
     padding: 10px;
     border-radius: 5px;
@@ -84,34 +94,45 @@ li {
     position: relative;
 }
 
+@keyframes flip-down {
+    0% {
+        transform: rotateX(-90deg);
+        opacity: 0;
+    }
+    100% {
+        transform: rotateX(0);
+        opacity: 1;
+    }
+}
+
 .completed {
     text-decoration: line-through;
-    color: #bbb; /* Light grey */
+    color: #000000; /* Light grey */
 }
 
 button.complete-btn {
     position: absolute;
     right: 45px;
-    padding: 5px;
+    padding: 8px;
     border: none;
     border-radius: 5px;
     background-color: #4caf50; /* Green */
     cursor: pointer;
-    color: #f0f0f0; /* Light grey text */
+    color: #000000; /* Light grey text */
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 button.complete-btn:hover {
     background-color: #45a049; /* Darker green */
-    transform: scale(1.05);
+    transform: scale(1.06);
 }
 
 button.delete-btn {
     position: absolute;
     right: 10px;
-    padding: 5px;
+    padding: 7px;
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     cursor: pointer;
     color: #f0f0f0; /* Light grey text */
     background-color: #d9534f; /* Red */
@@ -120,22 +141,22 @@ button.delete-btn {
 
 button.delete-btn:hover {
     background-color: #c9302c; /* Darker red */
-    transform: scale(1.05);
+    transform: scale(1.06);
 }
 
 select {
     padding: 5px;
     border: none;
     border-radius: 5px;
-    background-color: #5a5a5a; /* Lighter grey */
+    background-color: #7593af; /* Lighter grey */
     cursor: pointer;
     margin-top: 20px;
-    color: #f0f0f0; /* Light grey text */
+    color: #ffffff; /* Light grey text */
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 select:hover {
-    background-color: #4b4b4b; /* Slightly lighter grey */
+    background-color: #476f95; /* Slightly lighter grey */
     transform: scale(1.05);
 }
 
